--- a/frontend/templates/new_password.html
+++ b/frontend/templates/new_password.html
@@ -13,21 +13,58 @@
         <div class="card-body">
           <form method="post" action="#">
             <div class="row">
-              <div class="col-3">
-                <label for="exampleFormControlInput1" class="form-label">Data para Expiração</label>
-                <input type="date" class="form-control" id="exampleFormControlInput1" required>
+              <div class="col-md-6 col-xxl-3">
+                <label for="description" class="form-label">Descrição da Senha</label>
+                <input type="text" class="form-control form-control-sm" id="description" required>
               </div>
-              <div class="col-3">
-                <label for="exampleFormControlInput2" class="form-label">Hora para Expiração</label>
-                <input type="time" class="form-control" id="exampleFormControlInput2" required>
+              <div class="col-md-6 col-xxl-3">
+                <label for="expiration_date" class="form-label">Data para Expiração</label>
+                <input type="date" class="form-control form-control-sm" id="expiration_date" required>
               </div>
-              <div class="col-3">
-                <label for="exampleFormControlInput1" class="form-label">Quantidade Máxima de Visualizações</label>
-                <input type="number" class="form-control" id="exampleFormControlInput1" min="1" required>
+              <div class="col-md-6 col-xxl-3">
+                <label for="expiration_time" class="form-label">Hora para Expiração</label>
+                <input type="time" class="form-control form-control-sm" id="expiration_time" required>
+              </div>
+              <div class="col-md-6 col-xxl-3">
+                <label for="max_visualization_quantity" class="form-label">Quantidade Máxima de Visualizações</label>
+                <input type="number" class="form-control form-control-sm" id="max_visualization_quantity" min="1" required>
+              </div>
+              <div class="col-12">
+                <div class="form-check mt-3">
+                  <input class="form-check-input" type="checkbox" id="allow_numbers" id="allow_numbers">
+                  <label class="form-check-label" for="allow_numbers">Permitir números</label>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="form-check mt-2">
+                  <input class="form-check-input" type="checkbox" id="allow_special_characters" name="allow_special_characters">
+                  <label class="form-check-label" for="allow_special_characters">Permitir caracteres especiais</label>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="form-check mt-2">
+                  <input class="form-check-input" type="checkbox" id="allow_letters" name="allow_letters">
+                  <label class="form-check-label" for="allow_letters">Permitir letras</label>
+                </div>
+
+                <ul id="letter_variation" class="list-group list-group-flush d-none">
+                  <li class="list-group-item border-0">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="allow_uppercase_letters" name="allow_uppercase_letters">
+                      <label class="form-check-label" for="allow_uppercase_letters">Maiúsculas</label>
+                    </div>
+                  </li>
+                  <li class="list-group-item border-0 py-1">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="allow_lowercase_letters" name="allow_lowercase_letters">
+                      <label class="form-check-label" for="allow_lowercase_letters">Minúsculas</label>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </div>
 
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-end mt-3">
               <button class="btn btn-primary btn-sm">Gerar Senha</button>
             </div>
           </form>
