Adicionando método para geração de senhas e lembrete no frontend
- Classe PasswordGenerator com método estático para geração de senhas de acordo com alguns critérios
- Lembrete para adicionar o campo comprimento no formulário de criação de senha

--- a/src/frontend/templates/new_password.html
+++ b/src/frontend/templates/new_password.html
@@ -29,6 +29,7 @@
                 <label for="max_visualization_quantity" class="form-label">Quantidade Máxima de Visualizações</label>
                 <input type="number" class="form-control form-control-sm" id="max_visualization_quantity" min="1" required>
               </div>
+              <!-- Adicionar campo para comprimento da senha -->
               <div class="col-12">
                 <div class="form-check mt-3">
                   <input class="form-check-input" type="checkbox" id="allow_numbers" id="allow_numbers">
