--- a/src/frontend/templates/new_password.html
+++ b/src/frontend/templates/new_password.html
@@ -11,28 +11,27 @@
           <a class="btn btn-secondary btn-sm" href="{{ url_for('catch_all') }}">Voltar</a>
         </div>
         <div class="card-body">
-          <form method="post" action="#">
+          <form method="post" action="{{ url_for('catch_all', path='new_password') }}">
             <div class="row">
               <div class="col-md-6 col-xxl-3">
                 <label for="description" class="form-label">Descrição da Senha</label>
-                <input type="text" class="form-control form-control-sm" id="description" required>
+                <input type="text" class="form-control form-control-sm text-capitalize" id="description" name="description" required>
               </div>
               <div class="col-md-6 col-xxl-3">
-                <label for="expiration_date" class="form-label">Data para Expiração</label>
-                <input type="date" class="form-control form-control-sm" id="expiration_date" required>
+                <label for="expires_at" class="form-label">Data e Hora para Expiração</label>
+                <input type="datetime-local" class="form-control form-control-sm" id="expires_at" name="expires_at" required>
               </div>
               <div class="col-md-6 col-xxl-3">
-                <label for="expiration_time" class="form-label">Hora para Expiração</label>
-                <input type="time" class="form-control form-control-sm" id="expiration_time" required>
+                <label for="max_value_for_viewing" class="form-label">Quantidade Máxima de Visualizações</label>
+                <input type="number" class="form-control form-control-sm" id="max_value_for_viewing" name="max_value_for_viewing" min="1" required>
               </div>
               <div class="col-md-6 col-xxl-3">
-                <label for="max_visualization_quantity" class="form-label">Quantidade Máxima de Visualizações</label>
-                <input type="number" class="form-control form-control-sm" id="max_visualization_quantity" min="1" required>
+                <label for="length" class="form-label">Comprimento da Senha</label>
+                <input type="number" class="form-control form-control-sm" min="0" id="length" name="length" required>
               </div>
-              <!-- Adicionar campo para comprimento da senha -->
               <div class="col-12">
                 <div class="form-check mt-3">
-                  <input class="form-check-input" type="checkbox" id="allow_numbers" id="allow_numbers">
+                  <input class="form-check-input" type="checkbox" id="allow_numbers" name="allow_numbers">
                   <label class="form-check-label" for="allow_numbers">Permitir números</label>
                 </div>
               </div>
