Adicionando formulário com validação
- Formulário sendo validando com auxílio do Flask-WTForms
- Validação tanto no frontend quanto no backend (No microserviço frontend)

--- a/src/frontend/templates/base.html
+++ b/src/frontend/templates/base.html
@@ -19,14 +19,14 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('catch_all') }}">Password Generator</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">Password Generator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('catch_all') }}">Senhas</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Senhas</a>
           </div>
         </div>
       </div>
