--- a/src/frontend/templates/index.html
+++ b/src/frontend/templates/index.html
@@ -8,7 +8,7 @@
         <div class="card-header d-flex align-items-center justify-content-between">
           <div>Senhas Cadastradas</div>
 
-          <a class="btn btn-primary btn-sm" href="{{ url_for('catch_all', path='new_password') }}">Nova Senha</a>
+          <a class="btn btn-primary btn-sm" href="{{ url_for('new_password') }}">Nova Senha</a>
         </div>
         <div class="card-body">
           <table class="table table-responsive table-hover">
