--- a/src/frontend/templates/new_password.html
+++ b/src/frontend/templates/new_password.html
@@ -8,56 +8,76 @@
         <div class="card-header d-flex align-items-center justify-content-between">
           <div>Cadastrar Nova Senha</div>
 
-          <a class="btn btn-secondary btn-sm" href="{{ url_for('catch_all') }}">Voltar</a>
+          <a class="btn btn-secondary btn-sm" href="{{ url_for('index') }}">Voltar</a>
         </div>
         <div class="card-body">
-          <form method="post" action="{{ url_for('catch_all', path='new_password') }}">
+          <form class="needs-validation" method="post" action="{{ url_for('new_password') }}">
             <div class="row">
               <div class="col-md-6 col-xxl-3">
-                <label for="description" class="form-label">Descrição da Senha</label>
-                <input type="text" class="form-control form-control-sm text-capitalize" id="description" name="description" required>
+                <label for="{{ form.description.id }}" class="form-label">{{ form.description.label }}</label>
+                <input type="text" class="form-control form-control-sm text-capitalize {% if form.description.errors %}is-invalid{% endif %}" id="{{ form.description.id }}" name="{{ form.description.name }}" value="{% if form.description.data %}{{ form.description.data }}{% endif %}">
+                <div class="invalid-feedback">
+                  {% for error in form.description.errors %}
+                    {{ error }}
+                  {% endfor %}
+                </div>
               </div>
               <div class="col-md-6 col-xxl-3">
-                <label for="expires_at" class="form-label">Data e Hora para Expiração</label>
-                <input type="datetime-local" class="form-control form-control-sm" id="expires_at" name="expires_at" required>
+                <label for="{{ form.expires_at.id }}" class="form-label">{{ form.expires_at.label }}</label>
+                <input type="datetime-local" class="form-control form-control-sm {% if form.expires_at.errors %}is-invalid{% endif %}" id="{{ form.expires_at.id }}" name="{{ form.expires_at.name }}" value="{{ form.expires_at.data }}">
+                <div class="invalid-feedback">
+                  {% for error in form.expires_at.errors %}
+                    {{ error }}
+                  {% endfor %}
+                </div>
               </div>
               <div class="col-md-6 col-xxl-3">
-                <label for="max_value_for_viewing" class="form-label">Quantidade Máxima de Visualizações</label>
-                <input type="number" class="form-control form-control-sm" id="max_value_for_viewing" name="max_value_for_viewing" min="1" required>
+                <label for="{{ form.max_value_for_viewing.id }}" class="form-label">{{ form.max_value_for_viewing.label }}</label>
+                <input type="number" class="form-control form-control-sm {% if form.max_value_for_viewing.errors %}is-invalid{% endif %}" id="{{ form.max_value_for_viewing.id }}" name="{{ form.max_value_for_viewing.name }}" min="1" value="{% if form.max_value_for_viewing.data %}{{ form.max_value_for_viewing.data }}{% endif %}">
+                <div class="invalid-feedback">
+                  {% for error in form.max_value_for_viewing.errors %}
+                    {{ error }}
+                  {% endfor %}
+                </div>
               </div>
               <div class="col-md-6 col-xxl-3">
-                <label for="length" class="form-label">Comprimento da Senha</label>
-                <input type="number" class="form-control form-control-sm" min="0" id="length" name="length" required>
+                <label for="{{ form.length.id }}" class="form-label">{{ form.length.label }}</label>
+                <input type="number" class="form-control form-control-sm {% if form.length.errors %}is-invalid{% endif %}" min="0" id="{{ form.length.id }}" name="{{ form.length.name }}" value="{% if form.length.data %}{{ form.length.data }}{% endif %}">
+                <div class="invalid-feedback">
+                  {% for error in form.length.errors %}
+                    {{ error }}
+                  {% endfor %}
+                </div>
               </div>
               <div class="col-12">
                 <div class="form-check mt-3">
-                  <input class="form-check-input" type="checkbox" id="allow_numbers" name="allow_numbers">
-                  <label class="form-check-label" for="allow_numbers">Permitir números</label>
+                  <input class="form-check-input" type="checkbox" id="{{ form.allow_numbers.id }}" name="{{ form.allow_numbers.name }}" {% if form.allow_numbers.data %}checked{% endif %}>
+                  <label class="form-check-label" for="{{ form.allow_numbers.id }}">{{ form.allow_numbers.label }}</label>
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" id="allow_special_characters" name="allow_special_characters">
-                  <label class="form-check-label" for="allow_special_characters">Permitir caracteres especiais</label>
+                  <input class="form-check-input" type="checkbox" id="{{ form.allow_special_characters.id }}" name="{{ form.allow_special_characters.name }}" {% if form.allow_special_characters.data %}checked{% endif %}>
+                  <label class="form-check-label" for="{{ form.allow_special_characters.id }}">{{ form.allow_special_characters.label }}</label>
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-check mt-2">
-                  <input class="form-check-input" type="checkbox" id="allow_letters" name="allow_letters">
-                  <label class="form-check-label" for="allow_letters">Permitir letras</label>
+                  <input class="form-check-input" type="checkbox" id="{{ form.allow_letters.id }}" name="{{ form.allow_letters.name }}" {% if form.allow_letters.data %}checked{% endif %}>
+                  <label class="form-check-label" for="{{ form.allow_letters.id }}">{{ form.allow_letters.label }}</label>
                 </div>
 
                 <ul id="letter_variation" class="list-group list-group-flush d-none">
                   <li class="list-group-item border-0">
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="allow_uppercase_letters" name="allow_uppercase_letters">
-                      <label class="form-check-label" for="allow_uppercase_letters">Maiúsculas</label>
+                      <input class="form-check-input" type="checkbox" id="{{ form.allow_uppercase_letters.id }}" name="{{ form.allow_uppercase_letters.name }}" {% if form.allow_uppercase_letters.data %}checked{% endif %}>
+                      <label class="form-check-label" for="{{ form.allow_uppercase_letters.id }}">{{ form.allow_uppercase_letters.label }}</label>
                     </div>
                   </li>
                   <li class="list-group-item border-0 py-1">
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="allow_lowercase_letters" name="allow_lowercase_letters">
-                      <label class="form-check-label" for="allow_lowercase_letters">Minúsculas</label>
+                      <input class="form-check-input" type="checkbox" id="{{ form.allow_lowercase_letters.id }}" name="{{ form.allow_lowercase_letters.name }}" {% if form.allow_lowercase_letters.data %}checked{% endif %}>
+                      <label class="form-check-label" for="{{ form.allow_lowercase_letters.id }}">{{ form.allow_lowercase_letters.label }}</label>
                     </div>
                   </li>
                 </ul>
