--- a/src/frontend/templates/new_password.html
+++ b/src/frontend/templates/new_password.html
@@ -96,5 +96,5 @@
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='new_password.js') }}"></script>
+<script src="{{ url_for('static', filename='js/new_password.js') }}"></script>
 {% endblock %}
